apps/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: apps
  labels:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/component: application
  ports:
    - {name: http, port: 3456, targetPort: http, protocol: TCP}
