apps/vikunja/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja
  namespace: apps
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - tasks.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
      backendRefs:
        - name: vikunja
          port: 3456
